[gd_scene load_steps=5 format=3 uid="uid://ddfuesfbx7gun"]

[ext_resource type="Texture2D" uid="uid://d65jtbo3b07t" path="res://addons/hyh.digression/icons/icon_clear.svg" id="1_ceq0j"]
[ext_resource type="Script" uid="uid://bff7rxa642mpi" path="res://addons/hyh.digression/editor/maximised/MaximisedDialogueNode.gd" id="1_p0kw4"]
[ext_resource type="PackedScene" uid="uid://co4le7crf047l" path="res://addons/hyh.digression/editor/controls/drag/DragTargetHSeparator.tscn" id="2_p0kw4"]
[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.digression/icons/icon_add.svg" id="4_l61x8"]

[node name="MaximisedDialogueNode" type="VBoxContainer"]
script = ExtResource("1_p0kw4")

[node name="CharacterOptionsContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 3
theme_override_constants/v_separation = 10
columns = 3

[node name="Label" type="Label" parent="CharacterOptionsContainer"]
layout_mode = 2
text = "Character:"

[node name="CharacterSelect" type="OptionButton" parent="CharacterOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false

[node name="ClearCharacterButton" type="Button" parent="CharacterOptionsContainer"]
layout_mode = 2
icon = ExtResource("1_ceq0j")
flat = true

[node name="DragTargetHSeparator" parent="." instance=ExtResource("2_p0kw4")]
layout_mode = 2
accepted_classes = Array[int]([1])

[node name="SectionsContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="AddSectionButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Section"
icon = ExtResource("4_l61x8")
flat = true

[connection signal="item_selected" from="CharacterOptionsContainer/CharacterSelect" to="." method="_on_character_select_item_selected"]
[connection signal="pressed" from="CharacterOptionsContainer/ClearCharacterButton" to="." method="_on_clear_character_button_pressed"]
[connection signal="dropped" from="DragTargetHSeparator" to="." method="_on_character_options_separator_dropped"]
[connection signal="pressed" from="AddSectionButton" to="." method="_on_add_section_button_pressed"]
